# snake-rs

./: Cargo.toml  README.md
src/: gtk.rs  main.rs  snake.rs  web.rs
static/: index.html
switch/: Cargo.toml  Xargo.toml  aarch64-horizon-elf.json  build.sh  clean.sh
switch/src/: main.rs  snake.rs
