[package]
name = "snake-rs"
version = "0.1.0"
authors = ["kirjavascript"]

[dependencies]
gtk = { version = "^0", optional = true }
gdk = { version = "^0", optional = true }
gdk-pixbuf = { version = "^0", optional = true }
rand = { version = "0.4.2", optional = true }
stdweb = { version = "0.4.13", optional = true }

[features]
gtk-deps = ["gtk", "gdk", "gdk-pixbuf", "rand"]
web-deps = ["stdweb"]

[[bin]]
name = "gtk"
path = "src/gtk.rs"
required-features = ["gtk-deps"]

[[bin]]
name = "web"
path = "src/web.rs"
required-features = ["web-deps"]
